force-app/main/default/objects/ER_Employee__c/ER_Employee__c.object-meta.xml
<CustomObject>
    <label>Employeee</label>
    <nameField>
        <label>Employee Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employeees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>