force-app/main/default/objects/ER_Employee__c/fields/ER_Card_Operational_System_ID__c.field-meta.xml
<CustomField>
    <fullName>ER_Card_Operational_System_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Card Operational System ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>