force-app/main/default/objects/ER_Employee__c/fields/ER_Client__c.field-meta.xml
<CustomField>
    <fullName>ER_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>