force-app/main/default/objects/ER_Employee__c/fields/ER_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>ER_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>