force-app/main/default/objects/ER_Employee__c/fields/ER_Delivery_Address_City__c.field-meta.xml
<CustomField>
    <fullName>ER_Delivery_Address_City__c</fullName>
    <label>Delivery Address City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>