force-app/main/default/objects/ER_Employee__c/fields/ER_Delivery_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>ER_Delivery_Address_Country__c</fullName>
    <label>Delivery Address Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>