force-app/main/default/objects/ER_Employee__c/fields/ER_Delivery_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>ER_Delivery_Address_Street__c</fullName>
    <label>Delivery Address Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>