force-app/main/default/objects/ER_Employee__c/fields/ER_Delivery_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ER_Delivery_Address_Zip_Code__c</fullName>
    <label>Delivery Address Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>