force-app/main/default/objects/ER_Employee__c/fields/ER_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>ER_Employee_Number__c</fullName>
    <label>Employee Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>