force-app/main/default/objects/ER_Employee__c/fields/ER_Individual__c.field-meta.xml
<CustomField>
    <fullName>ER_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>