force-app/main/default/objects/ER_Employee__c/fields/ER_LastName__c.field-meta.xml
<CustomField>
    <fullName>ER_LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>