force-app/main/default/objects/ER_Employee__c/fields/ER_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>ER_Office_Phone__c</fullName>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>