force-app/main/default/objects/ER_Employee__c/fields/ER_Professional_Email__c.field-meta.xml
<CustomField>
    <fullName>ER_Professional_Email__c</fullName>
    <label>Professional Email</label>
    <type>Email</type>
</CustomField>