force-app/main/default/objects/ER_Employee__c/fields/ER_Professional_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>ER_Professional_Mobile_Phone__c</fullName>
    <label>Professional Mobile Phone</label>
    <type>Phone</type>
</CustomField>