force-app/main/default/objects/ER_Employee__c/fields/ER_Salutation__c.field-meta.xml
<CustomField>
    <fullName>ER_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Herr</fullName>
            </value>
            <value>
                <fullName>Frau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>