force-app/main/default/objects/ER_Employee__c/fields/ERDE_Employee_Full_Name_with_Saluation__c.field-meta.xml
<CustomField>
    <fullName>ERDE_Employee_Full_Name_with_Saluation__c</fullName>
    <formula>TEXT( ER_Salutation__c ) &amp; &quot; &quot;&amp; Name</formula>
    <label>Employee Full Name with Saluation</label>
    <type>Text</type>
</CustomField>