force-app/main/default/objects/ER_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ER_Client__c</columns>
    <columns>ER_Individual__c</columns>
    <columns>ER_Employee_Number__c</columns>
    <columns>ER_Delivery_Address_Street__c</columns>
    <columns>ER_Delivery_Address_Zip_Code__c</columns>
    <columns>ER_Delivery_Address_City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>